--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "sass": "^1.80.6",
     "typescript": "~5.6.2",
     "vite": "^5.4.10"
+  },
+  "dependencies": {
+    "dayjs": "^1.11.13"
   }
 }
